<resources>
    <string name="app_name">GadoPro</string>

    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_enter_guess">Entrar como convidado</string>
    <string name="login_start_session">Entrar</string>
    <string name="login_warning">Atenção</string>
    <string name="login_guess_can_lost_data">Ao continuar como convidado seus dados poderão ser perdidos!</string>
    <string name="login_continue">Continuar</string>
    <string name="login_create_account">Criar conta</string>

    <string name="home_production">Produção</string>
    <string name="home_health_management">Manejo sanitário</string>
    <string name="home_what_control_today">O que vamos controlar hoje ?</string>

    <string name="production_insert_cow_details">Insira as informações do seu animal</string>
    <string name="production_register">Registro</string>
    <string name="production_identification_number">Número de identificação</string>
    <string name="production_description">Descrição</string>
    <string name="production_last_calf">Última cria</string>
    <string name="production_calf">Bezerro</string>
    <string name="production_heifer">Bezerra</string>
    <string name="production_save">Salvar</string>
    <string name="production_title">Produção</string>
</resources>