<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/spacing_16"
            android:src="@drawable/ic_login_cows"
            app:layout_constraintBottom_toTopOf="@+id/email_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_24"
            android:layout_marginTop="@dimen/spacing_48"
            app:layout_constraintBottom_toTopOf="@+id/password_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_24"
            android:layout_marginTop="@dimen/spacing_24"
            app:layout_constraintBottom_toTopOf="@+id/guess_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/guess_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            android:text="@string/login_enter_guess"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/password_container"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/password_container"
            app:layout_constraintTop_toBottomOf="@+id/password_container" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_24"
            android:layout_marginBottom="@dimen/spacing_8"
            android:text="@string/login_start_session"
            app:layout_constraintBottom_toTopOf="@id/btn_create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_24"
            android:layout_marginBottom="@dimen/spacing_16"
            android:text="@string/login_create_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>